# asterisk

./: .cleancount  .cvsignore  .gitignore  .gitreview  .lastclean  .version  BSDmakefile  BUGS  CHANGES  CHANGES.html  CHANGES.md  COPYING  CREDITS  ChangeLog  HARDWARE  Jenks.xy.IO  LICENSE  Makefile  Makefile.moddir_rules  Makefile.rules  README  README-SERIOUSLY.bestpractices.md  README-SERIOUSLY.bestpractices.txt  README-addons.txt  README.cdr  README.html  README.iax  README.md  README.opsound  README.variables  SECURITY  SECURITY.md  Son d  UPGRADE-1.2.txt  UPGRADE-1.4.txt  UPGRADE-1.6.txt  UPGRADE-1.8.txt  UPGRADE-10.txt  UPGRADE-11.txt  UPGRADE-12.txt  (+2340 more)
1.2/: CHANGES  CREDITS  README.fpm  SECURITY  UPGRADE.txt  aeskey.c  app.c  ast_expr2.c  ast_expr2.fl  astmm.c  callerid.c  cdr.c  cli.c  db.c  dnsmgr.c  file.c  image.c  io.c  jitterbuf.h  logger.c  manager.c  md5.c  mkpkgconfig  privacy.c  rtp.c  say.c  sounds.txt  translate.c
1.2-netsec/: HARDWARE  README  ast_expr2.h  ast_expr2f.c  asterisk.sgml  autoservice.c  cdr.c  channel.c  jitterbuf.c  mkpkgconfig  pbx.c  rtp.c  sample.call  sched.c  sounds.txt  utils.c
1.4/: acinclude.m4  makeopts.in  sample.call
1.4.23-rc4/: CHANGES
1.4.26.1/: .version  CHANGES  Makefile.moddir_rules  UPGRADE-1.2.txt  configure  default.exports  makeopts.in
1.6.1/: CHANGES  LICENSE  README  UPGRADE-1.2.txt  UPGRADE-1.4.txt  UPGRADE-1.6.txt  UPGRADE.txt  Zaptel-to-DAHDI.txt  makeopts.in
1.8.15-cert1-rc3/: Makefile  Makefile.moddir_rules  Makefile.rules  README-SERIOUSLY.bestpractices.txt  UPGRADE-1.6.txt  UPGRADE.txt  bootstrap.sh
10.0.0-rc2/: BUGS  README-SERIOUSLY.bestpractices.txt  UPGRADE-1.8.txt  asterisk-10.0.0-rc2-summary.html  asterisk-10.0.0-rc2-summary.txt  configure  configure.ac  makeopts.in
ChangeLogs/: ChangeLog-16.30.1.md  ChangeLog-18.18.0-rc1.md  ChangeLog-18.18.0.md  ChangeLog-18.18.1.md  ChangeLog-18.19.0-rc1.md  ChangeLog-18.19.0-rc2.md  ChangeLog-18.19.0.md  ChangeLog-18.20.0-rc1.md  ChangeLog-18.20.0.md  ChangeLog-18.20.1.md  ChangeLog-18.20.2.md  ChangeLog-18.21.0-rc1.md  ChangeLog-18.21.0-rc2.md  ChangeLog-18.21.0.md  ChangeLog-18.22.0-rc1.md  ChangeLog-18.22.0-rc2.md  ChangeLog-18.22.0.md  ChangeLog-18.23.0-rc1.md  ChangeLog-18.23.0.md  ChangeLog-18.23.1.md  ChangeLog-18.24.0-rc1.md  ChangeLog-18.24.0.md  ChangeLog-18.24.1.md  ChangeLog-18.24.2.md  ChangeLog-18.24.3.md  ChangeLog-18.25.0-rc1.md  ChangeLog-18.25.0-rc2.md  ChangeLog-18.25.0.md  ChangeLog-18.26.0-rc1.md  ChangeLog-18.26.0.md  ChangeLog-18.26.1.md  ChangeLog-18.26.2.html  ChangeLog-18.26.2.md  ChangeLog-18.26.3.html  ChangeLog-18.26.3.md  ChangeLog-18.26.4.html  ChangeLog-18.26.4.md  ChangeLog-19.8.1.md  ChangeLog-20.10.0-rc1.md  ChangeLog-20.10.0-rc2.md  (+292 more)
addons/: .gitignore  Makefile  app_mysql.c  app_saycountpl.c  cdr_addon_mysql.c  cdr_mysql.c  chan_mobile.c  chan_ooh323.c  chan_ooh323.h  format_lame.c  format_mp3.c  ooh323cDriver.c  ooh323cDriver.h  res_config_mysql.c
agi/: .cvsignore  .gitignore  Makefile  agi-test.agi  agi.xml  eagi-sphinx-test.c  eagi-test.c  jukebox.agi
apps/: Makefile  app_adsiprog.c  app_agent_pool.c  app_agi.c  app_alarmreceiver.c  app_amd.c  app_attended_transfer.c  app_audiosocket.c  app_authenticate.c  app_blind_transfer.c  app_bridgeaddchan.c  app_bridgewait.c  app_broadcast.c  app_cdr.c  app_celgenuserevent.c  app_chanisavail.c  app_channelredirect.c  app_chanspy.c  app_confbridge.c  app_controlplayback.c  app_curl.c  app_cut.c  app_dahdibarge.c  app_dahdiras.c  app_dahdiscan.c  app_datetime.c  app_db.c  app_dial.c  app_dictate.c  app_directed_pickup.c  app_directory.c  app_disa.c  app_dtmfstore.c  app_dumpchan.c  app_echo.c  app_enumlookup.c  app_eval.c  app_exec.c  app_externalivr.c  app_fax.c  (+104 more)
astman/: .cvsignore  Makefile  astman.c
autoconf/: acx_pthread.m4  ast_c_compile_check.m4  ast_c_declare_check.m4  ast_c_define_check.m4  ast_check_gnu_make.m4  ast_check_openh323.m4  ast_check_osptk.m4  ast_check_pwlib.m4  ast_check_raii.m4  ast_check_strsep_array_bounds.m4  ast_cxx_check_std.m4  ast_ext_lib.m4  ast_ext_tool_check.m4  ast_func_fork.m4  ast_gcc_attribute.m4  ast_pkgconfig.m4  ast_prog_ld.m4  ast_prog_sed.m4  ax_cxx_compile_stdcxx.m4  libcurl.m4
bridges/: Makefile  bridge_builtin_features.c  bridge_builtin_interval_features.c  bridge_holding.c  bridge_multiplexed.c  bridge_native_rtp.c  bridge_simple.c  bridge_softmix.c  bridge_t38.c  bridges.xml
build_tools/: .cvsignore  .gitignore  Makefile  cflags-devmode.xml  cflags.xml  download_externals  embed_modules.xml  find_missing_support_level  get_documentation  get_documentation.py  get_makeopts  get_module_manifest  get_moduledeps  get_moduleinfo  get_sourceable_makeopts  install_subst  list_valid_installed_externals  make_build_h  make_buildopts_h  make_check_alembic  make_defaults_h  make_linker_version_script  make_loaderdeps.xslt  make_sample_voicemail  make_svn_branch_name  make_version  make_version_c  make_version_h  make_xml_documentation  menuselect-deps.in  menuselect.c  menuselect.h  mkdep  (+9 more)
editline/: .cvsignore  Makefile.in  common.c  config.guess  config.h.in  configure  configure.in  el.c  hist.c  history.c  map.c  readline.c  sys.h  term.c  tty.c
editline/np/: .cvsignore  vis.c
menuselect/: .gitignore  Makefile  README  acinclude.m4  aclocal.m4  autoconfig.h.in  bootstrap.sh  configure  configure.ac  example_menuselect-tree  linkedlists.h  make_version  makeopts.in  menuselect.c  menuselect.h  menuselect_curses.c  menuselect_gtk.c  menuselect_newt.c  menuselect_stub.c  strcompat.c
menuselect/contrib/: Makefile-dummy  menuselect-dummy
menuselect/mxml/: COPYING  Makefile.in  README  config.h.in  configure  configure.in  mxml-attr.c  mxml-entity.c  mxml-file.c  mxml-index.c  mxml-search.c  mxml.list.in
menuselect/test/: menuselect-tree
menuselect/test/build_tools/: menuselect-deps
mxml/: .cvsignore  ANNOUNCEMENT  CHANGES  Makefile.in  configure  configure.in  mxml-file.c  mxml-node.c  mxml-private.c  mxml-set.c  mxml-string.c  mxml.h  mxml.list.in  mxml.pc  mxml.pc.in  mxml.spec  mxmldoc.c  temp1.xmlfd  testmxml.c
(+6786 files in other folders)
